[package]
name = "psfu"
version = "0.3.3"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "process fu"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/psfu"
homepage = "https://github.com/idiv-biodiversity/psfu"
repository = "https://github.com/idiv-biodiversity/psfu"
keywords = ["process"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
anyhow = "1"
atty = "0.2"
errno = "0.2"
libc = "0.2"
procfs = "0.12"
termtree = "0.2"

[dependencies.clap]
version = "3"
features = ["cargo", "wrap_help"]

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[profile.release]
lto = true
