[package]
name = "psfu"
version = "0.5.0"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "process fu"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/psfu"
homepage = "https://github.com/idiv-biodiversity/psfu"
repository = "https://github.com/idiv-biodiversity/psfu"
keywords = ["process"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
errno = "0.3"
libc = "0.2"
procfs = "0.17"
termtree = "0.5"

[dependencies.clap]
version = "4"
features = ["cargo", "wrap_help"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[build-dependencies]
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
procfs = "0.17"

[profile.release]
lto = true
